<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:stretchColumns="*"
  	android:padding="10dip"
  	android:orientation="vertical">
  	
	<TableRow android:paddingBottom="5dip">
		<TextView android:text="@string/lbdictwd" 
			android:id="@+id/lbdictwd" 
			android:paddingRight="10dip"
			android:paddingTop="15dip"
		    android:textStyle="bold" 
		    android:gravity="right">
	   	</TextView>
		<EditText android:id="@+id/indictwd" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:ellipsize="none" 
			android:maxLength="15" 
			android:singleLine="true" 
			android:width="150dip">
		</EditText>
	</TableRow>
	<TableRow android:paddingBottom="5dip">
		<TextView android:text="@string/lbwrdtrn" 
			android:id="@+id/lbwrdtrn" 
			android:paddingRight="10dip"
			android:paddingTop="15dip"
		    android:textStyle="bold" 
		    android:gravity="right">
      	</TextView>
		<EditText android:id="@+id/inwrdtrl" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:maxLength="100">
		</EditText>
	</TableRow>

	<TableRow>
		<Button android:text="@string/btsavwrd" 
			android:id="@+id/btsavwrd" 
		    android:textStyle="bold"
      		android:layout_span="2">
		</Button>
	</TableRow>
	<TableRow>
		<Button android:text="@string/btcnswrd" 
			android:id="@+id/btcnswrd" 
		    android:textStyle="bold"
      		android:layout_span="2">
		</Button>
	</TableRow>	
</TableLayout>